# ai-model-manager

./: .gitignore  AIM-MANUAL.md  CLAUDE.md  LICENSE  Makefile  README.md  aim.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: download-implementation-plan.md  download-json-contract.md  download-prd.md  offload-restore-design.md
docs/superpowers/plans/: 2026-06-22-aim-sp1-source-env-management.md  2026-06-22-aim-sp2-native-ingest.md  2026-06-23-aim-sp3-backup-restore.md  2026-06-23-aim-sp4-flatfile-ingest.md
docs/superpowers/specs/: 2026-06-22-aim-sp1-source-env-management-design.md  2026-06-22-aim-sp2-native-ingest-design.md  2026-06-23-aim-sp3-backup-restore-design.md  2026-06-23-aim-sp4-flatfile-ingest-design.md  2026-06-24-aim-noninteractive-backend-install-design.md
tests/: __init__.py  conftest.py  test_aria2_install.py  test_backend_install.py  test_backup.py  test_backup_cli.py  test_category_infer.py  test_config_merge.py  test_download_core.py  test_download_e2e.py  test_download_multifile_progress.py  test_download_progress.py  test_env_cli.py  test_env_detector.py  test_external_links.py  test_flatfile_adapters.py  test_ingest_common.py  test_ingest_flatfile.py  test_ingest_hf.py  test_ingest_ms.py  test_ingest_ollama.py  test_ingest_robustness.py  test_offload_restore.py  test_ollama_detect.py  test_restore.py  test_secret_service.py  test_shell_writer.py  test_sources_config.py  test_sources_registry.py  test_verify_shim.py
